--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,11 +3,10 @@
 @tailwind utilities;
 
 * {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: 0;
-
 }
 
 :root {
@@ -16,7 +15,8 @@
   --sidebar-color: #fff;
   --primary-color: #695CFE;
   --toggle-color: #ddd;
-  --text-color: #101010;
+  --text-color: #191919;
+  --text-color-hover: #191919B3;
 
   --tran-02: all 0.2s ease;
   --tran-03: all 0.3s ease;
@@ -32,7 +32,7 @@
 }
 
 body {
-  @apply text-[var(--foreground)] bg-[var(--background)] h-full;
+  @apply text-[var(--foreground)] bg-[var(--background)] h-full ;
 }
 
 
