--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -1,14 +1,14 @@
-.navItems{
+.navItems {
     color: var(--text-color);
     font-size: 16px;
     font-weight: bold;
 }
 
-.navItems:hover{
+.navItems:hover {
     color: var(--text-color--hover);
 }
 
-.navItems li{
+.navItems li {
     position: relative;
 }
 
@@ -17,7 +17,7 @@
     display: none;
     top: 100%;
     left: 0;
-    width: auto;   
+    width: auto;
     background-color: #191919;
     color: #fff;
     border: 1px solid #ddd;
@@ -28,26 +28,27 @@
 }
 
 
-.navItems li:hover .dropdown {
+/* .navItems li:hover  */
+.dropdown.active {
     display: flex;
+    height: auto;
     flex-direction: column;
 }
 
 .dropdown li:hover {
-    color:#4e4e4e;
+    color: #4e4e4e;
 }
 
-@media screen and (max-width: 800px){
+@media screen and (max-width: 800px) {
     .container {
-        /* background-color: red; */
         display: flex;
         justify-content: space-between;
         align-items: center;
         padding: 5px 20px;
     }
-    
+
     .menuIcon {
-        margin-right: 0; 
+        margin-right: 0;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -55,72 +56,75 @@
         right: 0;
         cursor: pointer;
     }
-    
+
     .logo {
         margin-right: auto;
         display: flex;
         align-items: center;
-    }    
-    .navItems{
-            display: none;
-            flex-direction: column;
-            align-items: flex-start;
-            justify-content: flex-start;
-            background-color:#191919;
-            width: 100%;
-            position: fixed;
-            top: 0;
-            left: 0;
-            height: 100vh;
-            padding: 30px;
-            margin: 60px 0;
-            gap:30px;
-            cursor: pointer;
-            overflow-y: auto;
-            /* transition: max-height 0.5s ease; */
+    }
+
+    .navItems {
+        visibility: hidden;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        background-color: #191919;
+        width: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        padding: 30px;
+        margin: 60px 0;
+        gap: 30px;
+        z-index: 1000;
+        cursor: pointer;
+        overflow-y: auto;
+        transition: 0.7s ease-in;
+        height: 0px;
     }
 
     .navItems.active {
-        display: flex;
+        visibility: visible;
+        height: 100vh;
     }
 
     .navItems li {
         display: flex;
-        justify-content: space-between;
-        align-items: center;
-        position: relative;
+        justify-content: start;
+        align-items: first baseline;
+        flex-direction: column;
         color: #fff;
         font-size: 16px;
-        border:none;
+        border: none;
         width: 100%;
-      }
-
-    .navItems li:hover{
-        color: #8c8c8c;
     }
-    
-      .navItems li span{
+
+    .navItems li:hover {
+        color: #8c8c8c;
+        height: auto;
+    }
+
+    .navItems li span {
         position: absolute;
         right: 0;
-      }
-
-      .dropdown {
-        position: absolute; /* Giữ dropdown ở vị trí tuyệt đối so với li cha */
-        display: none; /* Mặc định ẩn dropdown */
-        top: 100%; /* Đẩy xuống dưới menu chính */
-        left: 0;
-        width: 100%; /* Đảm bảo dropdown chiếm toàn bộ chiều rộng */
-        background-color: #191919;
-        color: #fff;
-        border: 1px solid #ddd;
-        list-style: none;
-        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-        z-index: 999; /* Đảm bảo dropdown hiển thị trên các phần tử khác */
     }
 
-    /* Hiển thị dropdown khi menu chính được mở */
-    .navItems li.active .dropdown {
-        display: flex;
-        flex-direction: column;
+    .dropdown {
+        position: relative;
+        top: auto;
+        left: auto;
+        background-color: #191919;
+        border: none;
+        box-shadow: none;
+        margin-top: 10px;
+        padding: 10px 0;
+        width: 100%;
+        overflow: hidden;
+        max-height: 0;
+        transition: max-height 1s ease-in !important;
+    }
+    .dropdown.active {
+        overflow: visible;
+        max-height: 400px;
     }
 }
